# pico_display

./: .gitignore  CMakeLists.txt  README.md  codechecks  display.c  display.h  display_fonts.c  hardware.c  hardware.h  iodevice.c  iodevice.h  main.c  main_console.h  main_display.h  main_page.h  page_ctrl.h  page_diag.h  page_home.h  page_mesg.h  utilities.h
system/: common.js  config.ini  main.js  package.json  test.js  udev_69-libmtp.rules.patch  udev_99-badtuna.rules
